fixed instagram hover problem on secondary pages and gallery redundancy on mobile.

--- a/site/assets/modules/_galleria.css
+++ b/site/assets/modules/_galleria.css
@@ -1,4 +1,9 @@
 .galleria { 
+
+	@media (max-width: 800px) {
+		display: none;
+	}
+	
 	width: 100%; 
 	min-height: 900px; 
 	background: #000 
